--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,9 @@
   },
   	"icons": {
         "128": "textAnnotate.png"
-    }
+    },
+	"web_accessible_resources": [{ 
+  "resources": ["lz-string.js"],
+  "matches": ["<all_urls>"]
+}]
 }
